--- a/Proj1/Android/Reflow/AndroidManifest.xml
+++ b/Proj1/Android/Reflow/AndroidManifest.xml
@@ -22,7 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="Graph_activity"></activity>
+        <activity android:name="Graph_activity" >
+        </activity>
+
+        <service android:name="ReflowOvenService" />
     </application>
 
 </manifest>
