--- a/Proj1/Android/Reflow/AndroidManifest.xml
+++ b/Proj1/Android/Reflow/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="18" />
 
     <application
+        android:name="com.example.reflow.bluetooth"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
